# gpt_CodeAnalysis

./: .gitignore  PS_SVD_1.md  README.md  flake.nix  pyproject.toml
T2-1/: bandwidth_mesh.f  legendre_com.f  local_basis_1d.f  local_basis_prime_1d.f  local_fem_1d.f  r8_uniform_ab.f  r8vec_dot_product.f  r8vec_sum.f  timestamp.f
T2-2/docs/: bandwidth_mesh.md  legendre_com.md  local_basis_1d.md  local_basis_prime_1d.md  local_fem_1d.md  r8_uniform_ab.md  r8vec_dot_product.md  r8vec_sum.md  timestamp.md
codegpt/: files.py  gpt_interface.py  main.py  parse.py  parser.py  prompts.py
commit-log/: 01-利用语法树这一魔法来统一化改造和分析代码.md  02-处理长代码以适应GPT模型的token限制.md
my_package/: code_analysis.py
src/: attach_3d.f
src-1/: attach_3d.f
t01/: allocation.md
t01/docs/: Full Document.md
t02/: allocation.f
t03/: pss.py  sxutili_PS_SVD_1.f
t04/: addshell.f
t04/docs/: addshell.md
tests/: fortran.f  python.py  sxutili_PS_SVD_1.f
tests/docs/: FUNC1.md  SUB1.md  bar.md  foo.md
tests/t00/: fortran.f  python.py
tests/t02/docs/: allocation.md
tests/t03/docs/: PS_SVD_1.md
tests/t04/docs/: addshell.adoc
tests/t05/: naca_4412_plot.py
tests/t05/docs/: main.adoc  main.md
